Chang my repository to new IDE.

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,5 @@ scala:
    - 2.11.8
    env: BUILD="base"
    script:
-      - sbt -jvm-opts main/scala/main.main compile
-      - sbt -jvm-opts main/scala/main.main test
+      - sbt -jvm-opts main/scala/cn.aircraft.main compile
+      - sbt -jvm-opts main/scala/cn.aircraft.main test
